--- a/CPU-Scheduling/styles.css
+++ b/CPU-Scheduling/styles.css
@@ -16,6 +16,8 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
+    box-sizing: border-box;
+    border: 0.5px solid black;
 }
 
 .process:before {
